<resources>
    <string name="app_name">CodebaseIOCase</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_ad">İlan Ara</string>

    <string name="room_count">Oda Sayısı</string>
    <string name="building_age">Bina Yaşı</string>
    <string name="gross_area">Brüt Alan</string>
    <string name="net_area">Net Alan</string>
    <string name="all_features">Tüm Özellikler</string>
    <string name="review">İncele</string>
    <string name="description">Açıklama</string>
    <string name="detail_carousel_image_count">1/3</string>
    <string name="error_text">Veriler yüklenemedi.</string>
</resources>